Add program-pof option in Makefile
Signed-off-by: Patrick J.P <patrick.pereira@intel.com>

--- a/quartus/Makefile
+++ b/quartus/Makefile
@@ -96,3 +96,6 @@ asm.chg:
 
 program: $(PROJECT).sof
 	quartus_pgm --no_banner --mode=jtag -o "P;$(PROJECT).sof"
+
+program-pof: $(PROJECT).pof
+        quartus_pgm --no_banner --mode=jtag -o "BVP;$(PROJECT).pof"
