Added QUARTUS_PATH so quartus binaries do not neet to be on the actual PATH.

--- a/quartus/Makefile
+++ b/quartus/Makefile
@@ -42,7 +42,20 @@ smart: smart.log
 
 ###################################################################
 # Executable Configuration
+#
+# QUARTUS_PATH: If empty then system path is searched.
+#               If set then requires trailling slash.
+#               Commented out so it may be set from environment.
 ###################################################################
+
+# QUARTUS_PATH = /opt/altera/13.0sp1/quartus/bin/
+
+QUARTUS_MAP  = $(QUARTUS_PATH)quartus_map
+QUARTUS_FIT  = $(QUARTUS_PATH)quartus_fit
+QUARTUS_ASM  = $(QUARTUS_PATH)quartus_asm
+QUARTUS_STA  = $(QUARTUS_PATH)quartus_sta
+QUARTUS_SH   = $(QUARTUS_PATH)quartus_sh
+QUARTUS_PGM  = $(QUARTUS_PATH)quartus_pgm
 
 ifeq ($(shell uname -m),x86_64)
 QUARTUS_ARGS = --64bit
@@ -62,29 +75,29 @@ PGM_ARGS = $(QUARTUS_ARGS) --no_banner --mode=jtag
 STAMP = echo done >
 
 $(PROJECT).map.rpt: map.chg $(SOURCE_FILES) 
-	quartus_map $(MAP_ARGS) $(PROJECT)
+	$(QUARTUS_MAP) $(MAP_ARGS) $(PROJECT)
 	$(STAMP) fit.chg
 
 $(PROJECT).fit.rpt: fit.chg $(PROJECT).map.rpt
-	quartus_fit $(FIT_ARGS) $(PROJECT)
+	$(QUARTUS_FIT) $(FIT_ARGS) $(PROJECT)
 	$(STAMP) asm.chg
 	$(STAMP) sta.chg
 
 $(PROJECT).asm.rpt: asm.chg $(PROJECT).fit.rpt
-	quartus_asm $(ASM_ARGS) $(PROJECT)
+	$(QUARTUS_ASM) $(ASM_ARGS) $(PROJECT)
 
 $(PROJECT).sta.rpt: sta.chg $(PROJECT).fit.rpt
-	quartus_sta $(STA_ARGS) $(PROJECT) 
+	$(QUARTUS_STA) $(STA_ARGS) $(PROJECT) 
 
 smart.log: $(ASSIGNMENT_FILES)
-	quartus_sh $(SH_ARGS) --determine_smart_action $(PROJECT) > smart.log
+	$(QUARTUS_SH) $(SH_ARGS) --determine_smart_action $(PROJECT) > smart.log
 
 ###################################################################
 # Project initialization
 ###################################################################
 
 $(ASSIGNMENT_FILES):
-	quartus_sh $(SH_ARGS) --prepare -f $(FAMILY) -t $(TOP_LEVEL_ENTITY) $(PROJECT)
+	$(QUARTUS_SH) $(SH_ARGS) --prepare -f $(FAMILY) -t $(TOP_LEVEL_ENTITY) $(PROJECT)
 	-cat $(BOARDFILE) >> $(PROJECT).qsf
 map.chg:
 	$(STAMP) map.chg
@@ -100,7 +113,7 @@ asm.chg:
 ###################################################################
 
 program: $(PROJECT).sof
-	quartus_pgm $(PGM_ARGS) -o "P;$(PROJECT).sof"
+	$(QUARTUS_PGM) $(PGM_ARGS) -o "P;$(PROJECT).sof"
 
 program-pof: $(PROJECT).pof
-	quartus_pgm $(PGM_ARGS) -o "BVP;$(PROJECT).pof"
+	$(QUARTUS_PGM) $(PGM_ARGS) -o "BVP;$(PROJECT).pof"
